css/styles.css
.page-header {
  width: 100%;
  background: black;
  padding: 20px;
  display: flex;
  position: fixed;
  color: white;
  z-index: 10;
  justify-content: space-between;
}

.page-header__nav a {
  color: #fff;
  text-decoration: none;
  padding: 0 10px;
}

.jumbo-slider {
  width: 100%;
  height: 100vh;
  background: #1b1b1b;
}

.jumbo-slider__container {
  position: relative;
}
.container{
    max-width: 1200px;
    width: 100%;
    height: 100%;
    margin: auto;
}

.jumbo-slider__slide {
  width: 100%;
  height: 100vh;
  /* background: red; */
}

.jumbo-slider__slide-bg {
  width: 100%;
  height: 100vh;
  background-size: cover !important;
  background-position: center !important;
  opacity: 0;
  cursor: pointer;
  transition: opacity 2s ease-in-out;
  filter: saturate(0);
  position: absolute;
  z-index: 1;
}

.jumbo-slider__video-player{
    width: 100%;
    height: 100vh;
    transform: scale(1.5);

}

.jumbo-slider__slide--active .jumbo-slider__slide-bg {
  opacity: 0.5;
}

.jumbo-slider__info {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  z-index: 1;
}

.jumbo-slider__slide-number {
  font-size: 20rem;
  font-weight: 700;
  color: #03fc7f;
  position: relative;
  opacity: 0;
  transform: translate3d(0, 100px, 0);
  transition: transform .4s ease-in-out 1s, opacity .4s ease-in-out 1s;
  /* margin-bottom: 2rem; */
  margin: 2rem 0;
}

.jumbo-slider__title {
  font-size: 2rem;
  font-weight: 700;
  text-transform: uppercase;
  background: #fff;
  color: black;
  padding: 10px;
  width: fit-content;
  margin-bottom: 2rem;
  position: relative;
  opacity: 0;
  transform: translate3d(0, 100px, 0);
  transition: transform .4s ease-in-out 1.5s, opacity .4s ease-in-out 1.5s;
}

.jumbo-slider__description {
  max-width: 600px;
  line-height: 1.3;
  color: white;
  position: relative;
  opacity: 0;
  transform: translate3d(0, 100px, 0);
  transition: transform .4s ease-in-out 2s, opacity .4s ease-in-out 2s;
}

.jumbo-slider__slide--active .jumbo-slider__slide-number,
.jumbo-slider__slide--active .jumbo-slider__title,
.jumbo-slider__slide--active .jumbo-slider__description {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}

.jumbo-slider__nav {
  display: flex;
  position: absolute;
  top: 200px;
  right: 0;
  writing-mode: vertical-rl;
  z-index: 4;
}

.jumbo-slider__link {
  color: #fff;
  font-size: 1.4rem;
  padding: 20px;
  text-decoration: none;
}

.jumbo-slider__link--active {
  color: #03fc7f;
}

.jumbo-slider__elipsis {
  width: 100px;
  height: 100vh;
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 4;
}

.jumbo-slider__circle {
  width: 20px;
  height: 20px;
  border: 2px solid #03fc7f;
  border-radius: 50%;
  margin-bottom: 10px;
}

.jumbo-slider__circle--filled {
  background: #03fc7f;
}

